feat: add policy

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,5 +6,7 @@
 @import 'config/global';
 
 @import 'layout/header';
+@import 'layout/promo';
 @import 'layout/footer';
 @import 'layout/burgerMenu';
+@import 'layout/policy';
