--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -5,9 +5,28 @@
   &__container {
     display: flex;
     align-items: center;
-    @media (max-width: 510.98px) {
+    justify-content: space-between;
+    @include media(540) {
       flex-direction: column;
-      align-items: flex-start;
     }
+  }
+  // .footer__policy
+  &__policy {
+    background: transparent;
+    color: #fff;
+    transition: $standartTrans;
+    font-size: 14px;
+    color: #7c7d7d;
+    text-decoration: underline;
+    @include media(540) {
+      margin-bottom: 12px;
+    }
+    &:hover {
+      color: #fff;
+    }
+  }
+  // .footer__text
+  &__text {
+    color: #fff;
   }
 }
