--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -5,6 +5,8 @@
   padding-top: 15px;
   padding-bottom: 15px;
   box-shadow: 0 2px 15px rgba(#000, 5%);
+  background: rgba(#fff, 80%);
+  z-index: 10;
   // .header__container
   &__container {
     display: flex;
