--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -6,7 +6,7 @@
   padding-bottom: 15px;
   box-shadow: 0 2px 15px rgba(#000, 5%);
   background: rgba(#fff, 80%);
-  z-index: 10;
+  z-index: 100;
   // .header__container
   &__container {
     display: flex;
@@ -14,6 +14,7 @@
   }
   // .header__burger
   &__burger {
+    position: relative;
     display: none;
     background: $greenColor;
     width: 50px;
@@ -26,7 +27,7 @@
       background: darken($greenColor, 5%);
     }
     &._active {
-      z-index: 101;
+      z-index: 120 !important;
       span {
         background: transparent;
         &::after {
