import: add styles to style.scss

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'config/mixins';
 @import 'config/vars';
 @import 'config/reset';
+@import 'config/keyframes';
 @import 'config/scrollbar';
 @import 'config/base';
 @import 'config/common';
@@ -14,6 +15,7 @@
 @import 'layout/header';
 @import 'layout/promo';
 @import 'layout/promotions';
+@import 'layout/about';
 @import 'layout/footer';
 @import 'layout/burgerMenu';
 @import 'layout/policy';
