--- a/src/scss/layout/promo.scss
+++ b/src/scss/layout/promo.scss
@@ -1,7 +1,7 @@
 .promo {
   width: 100%;
-  padding-top: 120px;
-  padding-bottom: 60px;
+  @include adaptiveClamp('padding-top', 120, 100);
+  @include adaptiveClamp('padding-bottom', 60, 40);
   background-image: url("./../images/promo/bg.jpg");
   background-repeat: no-repeat;
   background-position: 60% -180px;
@@ -41,7 +41,7 @@
   &__title {
     max-width: 700px;
     margin-bottom: 3px;
-    font-size: 35px;
+    @include adaptiveClamp('font-size', 35, 28, 768, 320, 1);
     font-weight: 900;
     color: $blackColor;
     position: relative;
@@ -52,8 +52,11 @@
     @include media(700) {
       max-width: 100%;
     }
+    @include media(425) {
+      text-align: center
+    }
     span {
-      font-size: 30px;
+      @include adaptiveClamp('font-size', 30, 24, 768, 320, 1);
       font-weight: 500;
       color: #333333;
       position: relative;
@@ -62,7 +65,7 @@
   }
   // .promo__subtitle
   &__subtitle {
-    font-size: 36px;
+    @include adaptiveClamp('font-size', 36, 28, 768, 320, 1);
     font-weight: 900;
     color: $greenColor;
     text-shadow: 1px 1px 2px rgba(#000, 20%);
@@ -70,6 +73,9 @@
     backdrop-filter: blur(4px);
     padding: 5px 2px;
     max-width: 660px;
+    @include media(425) {
+      text-align: center
+    }
   }
   // .promo__features
   &__features {
@@ -84,6 +90,10 @@
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 0 30px rgba(#000, 15%);
+  @include media(425) {
+    padding: rem(12);
+    max-width: 100%;
+  }
   // .features__list
   &__list {
     display: flex;
