--- a/src/scss/layout/promotions.scss
+++ b/src/scss/layout/promotions.scss
@@ -1,6 +1,6 @@
 .promotions {
-  padding-top: rem(55);
-  padding-bottom: rem(60);
+  @include adaptiveClamp('padding-top', 55, 40);
+  @include adaptiveClamp('padding-bottom', 60, 40);
   // .promotions__container
   &__container {
     display: flex;
@@ -39,6 +39,9 @@
   overflow: hidden;
   border-radius: rem(16);
   box-shadow: 0 rem(4) rem(8) rgba(#000, 20%);
+  @include media(768) {
+    @include adaptiveClamp('width', 600, 300, 768, 320, 1);
+  }
   // .item-promotion__image
   &__image {
     width: 100%;
@@ -60,6 +63,20 @@
     grid-template-columns: 1fr rem(180) rem(180);
     align-items: center;
     column-gap: rem(8);
+    @include media(768) {
+      grid-template-columns: 1fr rem(148) rem(100);
+    }
+    @include media(620) {
+      grid-template-columns: 1fr rem(180);
+      grid-template-rows: auto auto;
+      justify-items: start;
+      column-gap: rem(20);
+      height: rem(120);
+      row-gap: rem(12);
+    }
+    @include media(460) {
+      grid-template-columns: rem(150) 1fr;
+    }
   }
   // .item-promotion__icon
   &__icon {
@@ -73,6 +90,9 @@
     left: rem(18);
     border: rem(4) solid lighten($greenColor, 5%);
     box-shadow: $lightBoxShadow;
+    @include media(620) {
+      bottom: rem(70);
+    }
     img {
       position: absolute;
       top: 50%;
@@ -88,9 +108,18 @@
     padding-left: rem(84);
     display: flex;
     flex-direction: column;
+    @include media(768) {
+      // padding-left: rem(60);
+    }
+    @include media(620) {
+      grid-column: span 2;
+    }
     // .item-promotion__text_title
     &_title {
       color: #fff;
+      @include media(768) {
+        font-size: rem(14);
+      }
       span {
         color: #fff;
         text-transform: uppercase;
@@ -101,6 +130,9 @@
     &_description {
       color: #fff;
       font-weight: 500;
+      @include media(768) {
+        font-size: rem(14);
+      }
     }
   }
   // .item-promotion__timer
@@ -116,6 +148,16 @@
     border-radius: rem(10);
     background: linear-gradient(180deg, #ff9600 0%, #f04d0c 50%, #e10219 100%);
     box-shadow: 0 0 0 rem(4) lighten($greenColor, 8%);
+    @include media(768) {
+      text-transform: uppercase;
+      font-size: rem(12);
+      font-weight: 500;
+      padding: rem(12) rem(2);
+    }
+    @include media(460) {
+      padding: rem(8);
+      height: 100%;
+    }
     &:hover {
       box-shadow: 0 0 0 rem(4) lighten($greenColor, 5%), inset 0 0 rem(10) rgba(#000, 60%);
     }
@@ -125,6 +167,11 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(rem(48), 1fr));
   justify-items: center;
+  @include media(620) {
+    grid-template-columns: repeat(3, rem(42));
+    column-gap: rem(12);
+    justify-items: normal;
+  }
   // .timer__group
   &__group {
     position: relative;
@@ -148,19 +195,19 @@
     // .timer__group_hours
     &_hours {
       &::after {
-        content: 'часов';
+        content: "часов";
       }
     }
     // .timer__group_minutes
     &_minutes {
       &::after {
-        content: 'минут';
+        content: "минут";
       }
     }
     // .timer__group_seconds
     &_seconds {
       &::after {
-        content: 'секунд';
+        content: "секунд";
       }
     }
   }
