feat: add class -ibg

--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -24,3 +24,13 @@
   margin: 0 auto;
   padding: 0 $mainOffset;
 }
+[class*="-ibg"] {
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
