import: add catalog to style.scss

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@
 @import 'layout/promo';
 @import 'layout/promotions';
 @import 'layout/about';
+@import 'layout/catalog';
 @import 'layout/footer';
 @import 'layout/burgerMenu';
 @import 'layout/policy';
