--- a/css/style.css
+++ b/css/style.css
@@ -953,6 +953,26 @@ h6 {
   font-weight: 400;
 }
 
+@-webkit-keyframes showHeader {
+  0% {
+    top: -100%;
+  }
+
+  100% {
+    top: 0;
+  }
+}
+
+@keyframes showHeader {
+  0% {
+    top: -100%;
+  }
+
+  100% {
+    top: 0;
+  }
+}
+
 * {
   scrollbar-width: 8px;
   scrollbar-color: #020202 #d6d6d6;
@@ -1004,10 +1024,30 @@ h6 {
   padding-top: 100px;
 }
 
+.page [data-observ] {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0.125rem;
+  background: transparent;
+  pointer-events: none;
+}
+
 [class*=__container] {
   max-width: 1120px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+[class*=-ibg] img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .title {
@@ -1046,6 +1086,18 @@ h6 {
           box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
   background: rgba(255, 255, 255, 0.8);
   z-index: 100;
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+}
+
+.header._sticky {
+  position: fixed;
+  left: 0;
+  -webkit-backdrop-filter: blur(0.375rem);
+          backdrop-filter: blur(0.375rem);
+  -webkit-animation: showHeader forwards 1000ms ease-in-out;
+          animation: showHeader forwards 1000ms ease-in-out;
 }
 
 .header__container {
@@ -1206,8 +1258,6 @@ h6 {
 
 .promo {
   width: 100%;
-  padding-top: 120px;
-  padding-bottom: 60px;
   background-repeat: no-repeat;
   background-position: 60% -180px;
   background-attachment: fixed;
@@ -1257,7 +1307,6 @@ h6 {
 .promo__title {
   max-width: 700px;
   margin-bottom: 3px;
-  font-size: 35px;
   font-weight: 900;
   color: #020202;
   position: relative;
@@ -1268,7 +1317,6 @@ h6 {
 }
 
 .promo__title span {
-  font-size: 30px;
   font-weight: 500;
   color: #333333;
   position: relative;
@@ -1276,7 +1324,6 @@ h6 {
 }
 
 .promo__subtitle {
-  font-size: 36px;
   font-weight: 900;
   color: #90c809;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
@@ -1407,11 +1454,6 @@ h6 {
 
 .features__button:hover {
   background: #7eb008;
-}
-
-.promotions {
-  padding-top: 3.4375rem;
-  padding-bottom: 3.75rem;
 }
 
 .promotions__container {
@@ -1622,6 +1664,196 @@ h6 {
   content: "секунд";
 }
 
+.about__title {
+  margin-bottom: 3.125rem;
+}
+
+.about__whyme-container {
+  margin-top: 3.125rem;
+}
+
+.stats-group {
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(11.5rem, 1fr));
+  row-gap: 1.875rem;
+}
+
+.stats-group__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  row-gap: 1.125rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.stats-group__item:not(:last-child) {
+  border-right: 0.125rem solid rgba(0, 0, 0, 0.05);
+}
+
+.stats-group__title {
+  color: #90c809;
+  font-size: 3rem;
+  font-weight: 900;
+  text-align: center;
+}
+
+.stats-group__description {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+  font-size: 1rem;
+  text-align: center;
+}
+
+.stats-group__image {
+  width: 120px;
+  height: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.stats-group__image img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.whyme__list {
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(16.25rem, 1fr));
+  gap: 2.5rem;
+}
+
+.whyme__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 1.25rem;
+}
+
+.whyme__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 0.75rem;
+     -moz-column-gap: 0.75rem;
+          column-gap: 0.75rem;
+}
+
+.whyme__icon {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 2.25rem;
+          flex: 0 0 2.25rem;
+  height: 2.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.whyme__label {
+  color: #90c809;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  line-height: 115%;
+  font-weight: 900;
+}
+
+.whyme__body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.whyme__article {
+  line-height: 131.25%;
+}
+
+.whyme__article-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 0.625rem;
+  padding-left: 1.125rem;
+}
+
+.whyme__article-item {
+  list-style-type: disc;
+}
+
+.whyme__article-item::marker {
+  color: #90c809;
+}
+
+.no-webp .catalog{
+  background-image: url("./../images/catalog/bg-catalog.jpg"); }
+
+.catalog {
+  padding-top: 10rem;
+  padding-bottom: 3.75rem;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  -webkit-box-shadow: inset 0 0.25rem 1.875rem rgba(0, 0, 0, 0.05), inset 0 0.25rem 0.625rem rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 0.25rem 1.875rem rgba(0, 0, 0, 0.05), inset 0 0.25rem 0.625rem rgba(0, 0, 0, 0.05);
+}
+
+.catalog__container {
+  position: relative;
+}
+
+.catalog__title {
+  margin-bottom: 3rem;
+}
+
+.catalog__vegetables-ibg {
+  position: absolute;
+  top: -15rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  overflow: hidden;
+  width: 100%;
+  padding-bottom: 24.1540256709%;
+}
+
 .footer {
   padding: 20px 0;
   background: #020202;
@@ -1823,6 +2055,50 @@ h6 {
   margin-bottom: 20px;
 }
 
+@media (min-width: 68.125em) {
+  .promo {
+    padding-top: 7.5rem;
+  }
+
+  .promo {
+    padding-bottom: 3.75rem;
+  }
+
+  .promotions {
+    padding-top: 3.4375rem;
+  }
+
+  .promotions {
+    padding-bottom: 3.75rem;
+  }
+
+  .about {
+    padding-top: 7.5rem;
+  }
+
+  .about {
+    padding-bottom: 7.5rem;
+  }
+}
+
+@media (min-width: 48em) {
+  .title {
+    font-size: 2.25rem;
+  }
+
+  .promo__title {
+    font-size: 2.1875rem;
+  }
+
+  .promo__title span {
+    font-size: 1.875rem;
+  }
+
+  .promo__subtitle {
+    font-size: 2.25rem;
+  }
+}
+
 @media (max-width: 768.98px) {
   .header__burger {
     display: -webkit-box;
@@ -1843,6 +2119,34 @@ h6 {
     display: none;
   }
 
+  .item-promotion__footer {
+    -ms-grid-columns: 1fr 9.25rem 6.25rem;
+    grid-template-columns: 1fr 9.25rem 6.25rem;
+  }
+
+  .item-promotion__text_title {
+    font-size: 0.875rem;
+  }
+
+  .item-promotion__text_description {
+    font-size: 0.875rem;
+  }
+
+  .item-promotion__button {
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    font-weight: 500;
+    padding: 0.75rem 0.125rem;
+  }
+
+  .catalog {
+    padding-top: 5.625rem;
+  }
+
+  .catalog__vegetables-ibg {
+    top: -9.375rem;
+  }
+
   .burger-menu._active {
     opacity: 1;
     visibility: visible;
@@ -1855,9 +2159,58 @@ h6 {
   }
 }
 
+@media (max-width: 768.98px) and (max-width: 20em) {
+  .item-promotion {
+    width: 18.75rem;
+  }
+}
+
+@media (max-width: 765.98px) {
+  .stats-group__item {
+    row-gap: 0.25rem;
+  }
+
+  .stats-group__item:not(:last-child) {
+    border: none;
+  }
+}
+
 @media (max-width: 700.98px) {
   .promo__title {
     max-width: 100%;
+  }
+}
+
+@media (max-width: 620.98px) {
+  .item-promotion__footer {
+    -ms-grid-columns: 1fr 11.25rem;
+    grid-template-columns: 1fr 11.25rem;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+    justify-items: start;
+    -webkit-column-gap: 1.25rem;
+       -moz-column-gap: 1.25rem;
+            column-gap: 1.25rem;
+    height: 7.5rem;
+    row-gap: 0.75rem;
+  }
+
+  .item-promotion__icon {
+    bottom: 4.375rem;
+  }
+
+  .item-promotion__text {
+    -ms-grid-column-span: 2;
+    grid-column: span 2;
+  }
+
+  .timer {
+    -ms-grid-columns: (2.625rem)[3];
+    grid-template-columns: repeat(3, 2.625rem);
+    -webkit-column-gap: 0.75rem;
+       -moz-column-gap: 0.75rem;
+            column-gap: 0.75rem;
+    justify-items: normal;
   }
 }
 
@@ -1880,11 +2233,238 @@ h6 {
   }
 }
 
+@media (max-width: 460.98px) {
+  .item-promotion__footer {
+    -ms-grid-columns: 9.375rem 1fr;
+    grid-template-columns: 9.375rem 1fr;
+  }
+
+  .item-promotion__button {
+    padding: 0.5rem;
+    height: 100%;
+  }
+}
+
 @media (max-width: 425.98px) {
+  .promo__title {
+    text-align: center;
+  }
+
+  .promo__subtitle {
+    text-align: center;
+  }
+
+  .features {
+    padding: 0.75rem;
+    max-width: 100%;
+  }
+
+  .catalog {
+    padding-top: 2.5rem;
+  }
+
+  .catalog__vegetables-ibg {
+    top: -5.3125rem;
+  }
+
   .policy {
     padding-left: 5px;
     padding-right: 5px;
   }
 }
 
+@media (max-width: 375.98px) {
+  .catalog__vegetables-ibg {
+    top: -4.6875rem;
+  }
+}
+
+@media (max-width: 20em) {
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .promo {
+    padding-top: 6.25rem;
+  }
+
+  .promo {
+    padding-bottom: 2.5rem;
+  }
+
+  .promo__title {
+    font-size: 1.75rem;
+  }
+
+  .promo__title span {
+    font-size: 1.5rem;
+  }
+
+  .promo__subtitle {
+    font-size: 1.75rem;
+  }
+
+  .promotions {
+    padding-top: 2.5rem;
+  }
+
+  .promotions {
+    padding-bottom: 2.5rem;
+  }
+
+  .about {
+    padding-top: 2.5rem;
+  }
+
+  .about {
+    padding-bottom: 2.5rem;
+  }
+}
+
+@media (min-width: 20em) and (max-width: 48em) {
+@supports (font-size: clamp( 1.5rem , 0.9642857143rem  +  2.6785714286vw , 2.25rem )) {
+    .title {
+      font-size: clamp( 1.5rem , 0.9642857143rem  +  2.6785714286vw , 2.25rem );
+    }
+}
+
+@supports not (font-size: clamp( 1.5rem , 0.9642857143rem  +  2.6785714286vw , 2.25rem )) {
+    .title {
+      font-size: calc(1.5rem + 0.75 * (100vw - 20rem) / 28);
+    }
+}
+
+@supports (font-size: clamp( 1.75rem , 1.4375rem  +  1.5625vw , 2.1875rem )) {
+    .promo__title {
+      font-size: clamp( 1.75rem , 1.4375rem  +  1.5625vw , 2.1875rem );
+    }
+}
+
+@supports not (font-size: clamp( 1.75rem , 1.4375rem  +  1.5625vw , 2.1875rem )) {
+    .promo__title {
+      font-size: calc(1.75rem + 0.4375 * (100vw - 20rem) / 28);
+    }
+}
+
+@supports (font-size: clamp( 1.5rem , 1.2321428571rem  +  1.3392857143vw , 1.875rem )) {
+    .promo__title span {
+      font-size: clamp( 1.5rem , 1.2321428571rem  +  1.3392857143vw , 1.875rem );
+    }
+}
+
+@supports not (font-size: clamp( 1.5rem , 1.2321428571rem  +  1.3392857143vw , 1.875rem )) {
+    .promo__title span {
+      font-size: calc(1.5rem + 0.375 * (100vw - 20rem) / 28);
+    }
+}
+
+@supports (font-size: clamp( 1.75rem , 1.3928571429rem  +  1.7857142857vw , 2.25rem )) {
+    .promo__subtitle {
+      font-size: clamp( 1.75rem , 1.3928571429rem  +  1.7857142857vw , 2.25rem );
+    }
+}
+
+@supports not (font-size: clamp( 1.75rem , 1.3928571429rem  +  1.7857142857vw , 2.25rem )) {
+    .promo__subtitle {
+      font-size: calc(1.75rem + 0.5 * (100vw - 20rem) / 28);
+    }
+}
+}
+
+@media (min-width: 20em) and (max-width: 68.125em) {
+@supports (padding-top: clamp( 6.25rem , 5.7305194805rem  +  2.5974025974vw , 7.5rem )) {
+    .promo {
+      padding-top: clamp( 6.25rem , 5.7305194805rem  +  2.5974025974vw , 7.5rem );
+    }
+}
+
+@supports not (padding-top: clamp( 6.25rem , 5.7305194805rem  +  2.5974025974vw , 7.5rem )) {
+    .promo {
+      padding-top: calc(6.25rem + 1.25 * (100vw - 20rem) / 48.125);
+    }
+}
+
+@supports (padding-bottom: clamp( 2.5rem , 1.9805194805rem  +  2.5974025974vw , 3.75rem )) {
+    .promo {
+      padding-bottom: clamp( 2.5rem , 1.9805194805rem  +  2.5974025974vw , 3.75rem );
+    }
+}
+
+@supports not (padding-bottom: clamp( 2.5rem , 1.9805194805rem  +  2.5974025974vw , 3.75rem )) {
+    .promo {
+      padding-bottom: calc(2.5rem + 1.25 * (100vw - 20rem) / 48.125);
+    }
+}
+
+@supports (padding-top: clamp( 2.5rem , 2.1103896104rem  +  1.9480519481vw , 3.4375rem )) {
+    .promotions {
+      padding-top: clamp( 2.5rem , 2.1103896104rem  +  1.9480519481vw , 3.4375rem );
+    }
+}
+
+@supports not (padding-top: clamp( 2.5rem , 2.1103896104rem  +  1.9480519481vw , 3.4375rem )) {
+    .promotions {
+      padding-top: calc(2.5rem + 0.9375 * (100vw - 20rem) / 48.125);
+    }
+}
+
+@supports (padding-bottom: clamp( 2.5rem , 1.9805194805rem  +  2.5974025974vw , 3.75rem )) {
+    .promotions {
+      padding-bottom: clamp( 2.5rem , 1.9805194805rem  +  2.5974025974vw , 3.75rem );
+    }
+}
+
+@supports not (padding-bottom: clamp( 2.5rem , 1.9805194805rem  +  2.5974025974vw , 3.75rem )) {
+    .promotions {
+      padding-bottom: calc(2.5rem + 1.25 * (100vw - 20rem) / 48.125);
+    }
+}
+
+@supports (padding-top: clamp( 2.5rem , 0.4220779221rem  +  10.3896103896vw , 7.5rem )) {
+    .about {
+      padding-top: clamp( 2.5rem , 0.4220779221rem  +  10.3896103896vw , 7.5rem );
+    }
+}
+
+@supports not (padding-top: clamp( 2.5rem , 0.4220779221rem  +  10.3896103896vw , 7.5rem )) {
+    .about {
+      padding-top: calc(2.5rem + 5 * (100vw - 20rem) / 48.125);
+    }
+}
+
+@supports (padding-bottom: clamp( 2.5rem , 0.4220779221rem  +  10.3896103896vw , 7.5rem )) {
+    .about {
+      padding-bottom: clamp( 2.5rem , 0.4220779221rem  +  10.3896103896vw , 7.5rem );
+    }
+}
+
+@supports not (padding-bottom: clamp( 2.5rem , 0.4220779221rem  +  10.3896103896vw , 7.5rem )) {
+    .about {
+      padding-bottom: calc(2.5rem + 5 * (100vw - 20rem) / 48.125);
+    }
+}
+}
+
+@media (max-width: 768.98px) and (min-width: 48em) {
+  .item-promotion {
+    width: 37.5rem;
+  }
+}
+
+@media (max-width: 768.98px) and (min-width: 20em) and (max-width: 48em) {
+@supports (width: clamp( 18.75rem , 5.3571428571rem  +  66.9642857143vw , 37.5rem )) {
+    .item-promotion {
+      width: clamp( 18.75rem , 5.3571428571rem  +  66.9642857143vw , 37.5rem );
+    }
+}
+
+@supports not (width: clamp( 18.75rem , 5.3571428571rem  +  66.9642857143vw , 37.5rem )) {
+    .item-promotion {
+      width: calc(18.75rem + 18.75 * (100vw - 20rem) / 28);
+    }
+}
+}
+
 .webp .promo{ background-image: url(./../images/promo/bg.webp); }
+
+.webp .catalog{ background-image: url(./../images/catalog/bg-catalog.webp); }
