feat: add bem elements class

--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -7,6 +7,8 @@
   &__about {}
   // .page__catalog
   &__catalog {}
+  // .page__individual-selection
+  &__individual-selection {}
 }
 .title {
   font-size: rem(36);
