--- a/css/style.css
+++ b/css/style.css
@@ -861,6 +861,14 @@ button.swiper-pagination-bullet {
   font-style: normal;
 }
 
+.form-selection__input-label,
+.form-selection__text-check-label,
+.form-selection__label {
+  color: #2a2a2a;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -1074,6 +1082,135 @@ h6 {
 
 .swiper .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: #90c809;
+}
+
+.custom-dropdown {
+  width: 100%;
+  position: relative;
+  z-index: 0;
+}
+
+.custom-dropdown._is-open {
+  z-index: 15;
+}
+
+.custom-dropdown._is-open .custom-dropdown__btn {
+  -webkit-box-shadow: 0 0 0 0.125rem rgba(144, 200, 9, 0.6);
+          box-shadow: 0 0 0 0.125rem rgba(144, 200, 9, 0.6);
+}
+
+.custom-dropdown._is-open .custom-dropdown__btn .custom-dropdown__icon {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.custom-dropdown._is-open .select-list {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.custom-dropdown__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 2.75rem;
+  border-radius: 0.375rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+}
+
+.custom-dropdown__btn:hover {
+  -webkit-box-shadow: 0 0 0 0.125rem rgba(144, 200, 9, 0.6);
+          box-shadow: 0 0 0 0.125rem rgba(144, 200, 9, 0.6);
+}
+
+.custom-dropdown__label {
+  margin-right: auto;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 0.875rem;
+  pointer-events: none;
+}
+
+.custom-dropdown__icon {
+  opacity: 50%;
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+  pointer-events: none;
+}
+
+.custom-dropdown__list {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  margin-top: 0.5rem;
+}
+
+.select-list {
+  width: 100%;
+  border-radius: 0.375rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 0.0625rem solid rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(1.25rem);
+      -ms-transform: translateY(1.25rem);
+          transform: translateY(1.25rem);
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 0.125rem rgba(0, 0, 0, 0.05), 0 0.25rem 1rem rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 0.125rem rgba(0, 0, 0, 0.05), 0 0.25rem 1rem rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
+}
+
+.select-list::-webkit-scrollbar {
+  display: none;
+}
+
+.select-list__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 2.375rem;
+          flex: 0 0 2.375rem;
+  padding: 0.625rem 0.75rem;
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.05);
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.select-list__item:not(:last-child) {
+  border-bottom: 0.0625rem solid rgba(0, 0, 0, 0.05);
+}
+
+.select-list__item._active {
+  color: #fff;
+  background-color: rgba(144, 200, 9, 0.3);
+}
+
+.select-list__item:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  color: #90c809;
 }
 
 .header {
@@ -1854,6 +1991,251 @@ h6 {
   padding-bottom: 24.1540256709%;
 }
 
+.no-webp .individual-selection{
+  background-image: url("../images/selection/bg-grass.jpg"); }
+
+.individual-selection {
+  padding-top: 2.5rem;
+  padding-bottom: 3.75rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+}
+
+.individual-selection__container {
+  position: relative;
+}
+
+.individual-selection__title {
+  color: #fff;
+  margin-bottom: 1rem;
+}
+
+.individual-selection__desc {
+  text-align: center;
+  color: #fff;
+  font-size: 1.125rem;
+  font-weight: 500;
+  margin-bottom: 5.3125rem;
+}
+
+.individual-selection__form-wrap {
+  position: relative;
+}
+
+.no-webp .individual-selection__form-wrap::before{
+  background-image: url("../images/selection/herb.png"); }
+
+.individual-selection__form-wrap::before {
+  content: "";
+  width: 100%;
+  height: 6.875rem;
+  position: absolute;
+  top: 1rem;
+  left: 50%;
+  -webkit-transform: translate(-50%, -100%);
+      -ms-transform: translate(-50%, -100%);
+          transform: translate(-50%, -100%);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: 0;
+}
+
+.individual-selection__form-selection {
+  position: relative;
+}
+
+.individual-selection__decore-image {
+  position: absolute;
+  bottom: -3.75rem;
+  right: 0;
+  pointer-events: none;
+  z-index: 10;
+}
+
+.form-selection {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: auto 3rem auto 3rem auto 3rem auto 3rem auto;
+  -ms-grid-columns: 1fr 1.3125rem 1fr 1.3125rem 1fr;
+      grid-template: repeat(5, auto)/repeat(3, 1fr);
+  -webkit-column-gap: 1.3125rem;
+     -moz-column-gap: 1.3125rem;
+          column-gap: 1.3125rem;
+  row-gap: 3rem;
+  background-color: #fff;
+  padding: 2.25rem 1.5%;
+  border-radius: 0.625rem;
+}
+
+.form-selection__form-field {
+  position: relative;
+}
+
+.form-selection__form-field_column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 1.25rem;
+}
+
+.form-selection__form-field_name {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+}
+
+.form-selection__form-field_phone {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+}
+
+.form-selection__form-field_button {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 5;
+  -ms-grid-row-span: 1;
+  grid-row: 5/6;
+}
+
+.form-selection__label {
+  display: inline-block;
+  margin-bottom: 1.25rem;
+}
+
+.form-selection__check-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 1rem;
+     -moz-column-gap: 1rem;
+          column-gap: 1rem;
+  cursor: pointer;
+}
+
+.form-selection__check-label input {
+  display: none;
+}
+
+.form-selection__check-label input:checked + .form-selection__custom-checkbox img {
+  opacity: 1;
+}
+
+.form-selection__custom-checkbox {
+  width: 2.25rem;
+  height: 2.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #f4f4f4;
+  border-radius: 0.375rem;
+}
+
+.form-selection__custom-checkbox img {
+  opacity: 0;
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+}
+
+.form-selection__input-control {
+  background-color: #f4f4f4;
+  border-radius: 0.375rem;
+  height: 2.75rem;
+  padding: 0 0.75rem;
+}
+
+.form-selection__input-control::-webkit-input-placeholder {
+  opacity: 1;
+  -webkit-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+
+.form-selection__input-control::-moz-placeholder {
+  opacity: 1;
+  -moz-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+
+.form-selection__input-control:-moz-placeholder {
+  opacity: 1;
+  -moz-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+
+.form-selection__input-control:-ms-input-placeholder {
+  opacity: 1;
+  -ms-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+
+.form-selection__input-control:focus::-webkit-input-placeholder {
+  opacity: 0;
+  -webkit-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+
+.form-selection__input-control:focus::-moz-placeholder {
+  opacity: 0;
+  -moz-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+
+.form-selection__input-control:focus:-moz-placeholder {
+  opacity: 0;
+  -moz-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+
+.form-selection__input-control:focus:-ms-input-placeholder {
+  opacity: 0;
+  -ms-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+
+.form-selection__button-submit {
+  padding: 1.3125rem 0.75rem;
+  width: 100%;
+  border-radius: 0.375rem;
+  background-color: #90c809;
+  color: #fff;
+  font-size: 1.125rem;
+  text-align: center;
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+}
+
+.form-selection__button-submit:hover {
+  background-color: #85b908;
+}
+
+.form-selection__button-submit:active {
+  background-color: #6d9707;
+}
+
 .footer {
   padding: 20px 0;
   background: #020202;
@@ -2165,6 +2547,35 @@ h6 {
   }
 }
 
+@media (max-width: 767.98px) {
+  .individual-selection__decore-image {
+    height: 15rem;
+  }
+
+  .form-selection {
+    -ms-grid-rows: (auto)[6];
+    -ms-grid-columns: (1fr)[2];
+        grid-template: repeat(6, auto)/repeat(2, 1fr);
+  }
+
+  .form-selection__form-field_name {
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5/6;
+  }
+
+  .form-selection__form-field_phone {
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5/6;
+  }
+
+  .form-selection__form-field_button {
+    -ms-grid-row: 6;
+    grid-row: 6;
+  }
+}
+
 @media (max-width: 765.98px) {
   .stats-group__item {
     row-gap: 0.25rem;
@@ -2468,3 +2879,7 @@ h6 {
 .webp .promo{ background-image: url(./../images/promo/bg.webp); }
 
 .webp .catalog{ background-image: url(./../images/catalog/bg-catalog.webp); }
+
+.webp .individual-selection{ background-image: url(../images/selection/bg-grass.webp); }
+
+.webp .individual-selection__form-wrap::before{ background-image: url(../images/selection/herb.webp); }
