--- a/src/scss/config/scrollbar.scss
+++ b/src/scss/config/scrollbar.scss
@@ -9,11 +9,11 @@
   }
   &::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(#000, 20%);
-    border-radius: 4px;
+    border-radius: 0;
     background: #eee;
   }
   &::-webkit-scrollbar-thumb {
-    border-radius: 4px;
+    border-radius: 0;
     border: 0px none #fff;
     background-color: lighten($firstAccentColor, 10%);
     transition: all 280ms ease-in-out;
