--- a/src/scss/layout/formSelection.scss
+++ b/src/scss/layout/formSelection.scss
@@ -9,6 +9,14 @@
   @include media(767) {
     grid-template: repeat(6, auto) / repeat(2, 1fr);
   }
+  @include media(500) {
+    grid-template: repeat(11, auto) / 1fr;
+    row-gap: rem(20);
+    margin: 0 rem(-15);
+    border-radius: 0;
+    padding-bottom: rem(120);
+    padding: rem(36) rem(15) rem(120);
+  }
   // .form-selection__form-field
   &__form-field {
     position: relative;
@@ -17,6 +25,9 @@
       display: flex;
       flex-direction: column;
       row-gap: rem(20);
+      @include media(500) {
+        row-gap: rem(12);
+      }
     }
     // .form-selection__form-field_name
     &_name {
@@ -24,6 +35,9 @@
       grid-row: 4 / 5;
       @include media(767) {
         grid-row: 5 / 6;
+      }
+      @include media(500) {
+        grid-row: 9 / 10;
       }
     }
     // .form-selection__form-field_phone
@@ -33,6 +47,10 @@
       @include media(767) {
         grid-row: 5 / 6;
       }
+      @include media(500) {
+        grid-column: 1 / 2;
+        grid-row: 10 / 11;
+      }
     }
     // .form-selection__form-field_button
     &_button {
@@ -41,6 +59,9 @@
       @include media(767) {
         grid-row: 6;
       }
+      @include media(500) {
+        grid-row: 11;
+      }
     }
   }
   // .form-selection__label
@@ -48,6 +69,9 @@
     display: inline-block;
     margin-bottom: rem(20);
     @extend %text-label;
+    @include media(500) {
+      margin-bottom: rem(12);
+    }
   }
   // .form-selection__dropdown
   &__dropdown {
