--- a/src/scss/config/keyframes.scss
+++ b/src/scss/config/keyframes.scss
@@ -1,3 +1,21 @@
+@keyframes rotation {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes blink {
+  from {
+    opacity: .5;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes showHeader {
   0% {
     top: -100%;
