--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,8 @@
 @import 'layout/catalog';
 @import 'layout/individualSelection';
 @import 'layout/formSelection';
+@import 'layout/reviews';
+@import 'layout/sliderReviews';
 @import 'layout/feedback';
 @import 'layout/footer';
 @import 'layout/burgerMenu';
