feat: вынес бем елементы

--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -14,6 +14,8 @@
   // .page__individual-selection
   &__individual-selection {
   }
+  // .page_reviews
+  &_reviews {}
   // .page__feedback
   &__feedback {}
 }
