refactor: переименовал layout в components

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -34,7 +34,7 @@
       background: darken($greenColor, 5%);
     }
     &._active {
-      z-index: 120 !important;
+      z-index: 120;
       span {
         background: transparent;
         &::after {
