--- a/src/scss/components/promotions.scss
+++ b/src/scss/components/promotions.scss
@@ -12,6 +12,8 @@
   }
   // .promotions__slider
   &__slider {
+    overflow: visible;
+    max-width: rem(780);
   }
   // .promotions__wrapper
   &__wrapper {
@@ -19,9 +21,7 @@
   }
   // .promotions__slide
   &__slide {
-    width: auto;
     opacity: 0.3;
-    transition: $standartTrans;
     user-select: none;
     &.swiper-slide-active {
       opacity: 1;
@@ -33,13 +33,14 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: rem(780);
-  margin: 0 auto;
+  //width: 100%;
+  max-width: rem(780);
+  // margin: 0 auto;
   overflow: hidden;
   border-radius: rem(16);
   box-shadow: 0 rem(4) rem(8) rgba(#000, 20%);
   @include media(768) {
-    @include adaptiveClamp('width', 600, 300, 768, 320, 1);
+    width: 100%;
   }
   // .item-promotion__image
   &__image {
